updating color picking code from class

--- a/color-picker/index.html
+++ b/color-picker/index.html
@@ -7,12 +7,14 @@
 	</head>
 	<body>
 		<div id="palette">
-			<div id="red" class="swatch"></div>
-			<div id="blue" class="swatch"></div>
-			<div id="green" class="swatch"></div>
+			<div id="red" class="swatch">red</div>
+			<div id="blue" class="swatch">blue</div>
+			<div id="green" class="swatch">green</div>
+			<div class="clearfix"></div>
 		</div>
 		<div>
-			<p>Some text</p>
+			<p id="text">Some text</p>
 		</div>
+	<script src="color-picker.js"></script>
 	</body>
 </html>
